<resources>
    <string name="app_name">Automactions</string>
    <string name="action_settings">Settings</string>
    <string name="event">Event</string>
    <string name="name">Name</string>
    <string name="action">Action (Optional)</string>
    <string name="app">App</string>
    <string name="url">Url</string>
    <string name="custom_actions">Custom Action</string>
    <string name="days">Days</string>
    <string name="when">When</string>
    <string name="location">Location</string>
    <string name="addresses">Addresses</string>
    <string name="choose_addresses">Choose Addresses</string>
    <string name="description">Description (Optional)</string>
    <string name="save_event">Save Event</string>
    <string name="ask_me_to_open">Ask me to open</string>
    <string name="open">Open</string>
    <string name="do_noting">Do nothing</string>

    <string name="anytime">Anytime</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="at_precisely">At precisely</string>
    <string name="empty"> </string>
    <string name="entering">Entering</string>
    <string name="exiting">Exiting</string>
    <string name="add_address">Add Address</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enter_address">Enter Address</string>

</resources>
