<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".event.CreateEventFragment"
            tools:showIn="@layout/content_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/create_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="5dp"
            android:text="@string/action"/>

        <Spinner
            android:id="@+id/spinner_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:id="@+id/action_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/action_type_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="1dp"
                android:text="@string/app"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/action_type_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="1dp"
                android:text="@string/url"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/action_type_custo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="1dp"
                android:text="@string/custom_actions"
                android:textSize="12sp"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/action_choosed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/action_choosed_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_close_black"/>

            <TextView
                android:id="@+id/action_choosed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/action_choosed_clear"
                android:fontFamily="sans-serif-medium"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/action_choosed_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/action_choosed_title"
                android:layout_toLeftOf="@id/action_choosed_clear"
                android:fontFamily="sans-serif"
                android:padding="5dp"/>

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="5dp"
            android:text="@string/days"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                style="@style/DaysTextView.Action"
                android:id="@+id/action_day_monday"
                android:text="M"/>

            <TextView
                style="@style/DaysTextView.Action"
                android:id="@+id/action_day_tuesday"
                android:text="T"/>

            <TextView
                style="@style/DaysTextView.Action"
                android:id="@+id/action_day_wednesday"
                android:text="W"/>

            <TextView
                style="@style/DaysTextView.Action"
                android:id="@+id/action_day_thursday"
                android:text="T"/>

            <TextView
                style="@style/DaysTextView.Action"
                android:id="@+id/action_day_friday"
                android:text="F"/>

            <TextView
                style="@style/DaysTextView.Action"
                android:id="@+id/action_day_saturday"
                android:text="S"/>

            <TextView
                style="@style/DaysTextView.Action"
                android:id="@+id/action_day_sunday"
                android:text="S"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="5dp"
            android:text="@string/when"/>

        <Spinner
            android:id="@+id/spinner_when"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="5dp"
            android:text="@string/location"/>

        <Spinner
            android:id="@+id/spinner_when_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:paddingLeft="10dp"
            android:text="@string/addresses"/>

        <Spinner
            android:id="@+id/spinner_addresses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="5dp"
            android:text="@string/description"/>

        <EditText
            android:id="@+id/edittext_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:maxLines="10"/>

        <Button
            android:id="@+id/button_save"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxWidth="300dp"
            android:text="@string/save_event"/>
    </LinearLayout>
</ScrollView>